--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "autoprefixer": "10.4.16",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
